Updated bug that shortened jumbotron and footer on smaller screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,6 @@ header {
   background-image: url("../images/technology1.png");
   opacity: 0.8;
   background-size: 100%;
-  max-width: 100%;
   height: 300px;
 }
 
@@ -100,7 +99,6 @@ footer {
   text-align: center;
   position: absolute;
   bottom: 0;
-  width: 100%;
   height: 55px;
 }
 
@@ -124,7 +122,7 @@ footer {
 }
 
 @media screen
-and (max-width : 900px) {
+and (max-width : 1000px) {
   .project-img {
     width: 80%;
   }
